overflow problem solved

--- a/client/src/components/catalog/Catalog.css
+++ b/client/src/components/catalog/Catalog.css
@@ -11,11 +11,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 2rem 3rem;
+    flex-wrap: wrap;
+    margin: 2rem 1rem;
 }
-.cars>*{
-    flex: 0 0 33.3333%
-}
-h1{
+.catalog h1{
     text-align: center;
+    font-size: 38px;
 }
