--- a/client/src/components/catalog/particle/CatalogParticle.css
+++ b/client/src/components/catalog/particle/CatalogParticle.css
@@ -1,10 +1,13 @@
 .car{
-    min-width: 30%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     background-color: white;
     margin: 2rem;
     text-align: center;
+    border-radius: 10px;
+    padding-bottom: 1rem;
+    box-shadow: 0px 6px 20px 0 rgb(4, 4, 4);
 }
 .car img{
         position: relative;
